--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9393,7 +9393,7 @@
 	<key>MaxVertically</key>
 	<false/>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/Desktop/repository/SettingFiles</string>
+	<string>~/Desktop/repository/iTerm2-Color-Schemes/schemes</string>
 	<key>NSQuotedKeystrokeBinding</key>
 	<string></string>
 	<key>NSRepeatCountBinding</key>
@@ -9425,15 +9425,19 @@
 		<integer>1</integer>
 	</dict>
 	<key>NSWindow Frame Preferences</key>
-	<string>389 408 924 485 0 0 1920 1057 </string>
+	<string>356 321 606 456 0 0 1280 777 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
-	<string>1941 745 400 129 1920 58 1920 1057 </string>
+	<string>84 648 400 129 0 0 1280 777 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
-	<string>650 516 620 392 0 0 1920 1057 </string>
+	<string>1610 232 620 392 1280 -224 1280 1001 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>323 434 918 381 0 0 1920 1057 </string>
+	<string>236 303 796 474 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>2060 205 1228 867 1920 58 1920 1057 </string>
+	<string>642 50 610 727 0 0 1280 777 </string>
+	<key>NSWindow Frame iTerm Window 1</key>
+	<string>79 64 625 714 0 0 1280 778 </string>
+	<key>NSWindow Frame iTerm Window 2</key>
+	<string>173 64 625 714 0 0 1280 778 </string>
 	<key>NeverWarnAboutShortLivedSessions_6DE05245-ABC6-4133-86ED-9837935D9C3A</key>
 	<true/>
 	<key>New Bookmarks</key>
@@ -9448,146 +9452,146 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19370138645172119</real>
+				<real>0.24313725531101227</real>
 				<key>Green Component</key>
-				<real>0.15575926005840302</real>
+				<real>0.24313725531101227</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.24313725531101227</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.14145714044570923</real>
+				<real>0.086274512112140656</real>
 				<key>Green Component</key>
-				<real>0.10840655118227005</real>
+				<real>0.043137256056070328</real>
 				<key>Red Component</key>
-				<real>0.81926977634429932</real>
+				<real>0.59215688705444336</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.38298487663269043</real>
+				<real>0.63529413938522339</real>
 				<key>Green Component</key>
-				<real>0.35665956139564514</real>
+				<real>0.83529412746429443</real>
 				<key>Red Component</key>
-				<real>0.27671992778778076</real>
+				<real>0.52941179275512695</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.43850564956665039</real>
+				<real>0.027450980392156862</real>
 				<key>Green Component</key>
-				<real>0.40717673301696777</real>
+				<real>0.81568627450980391</real>
 				<key>Red Component</key>
-				<real>0.32436618208885193</real>
+				<real>0.94509803921568625</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.51685798168182373</real>
+				<real>0.729411780834198</real>
 				<key>Green Component</key>
-				<real>0.50962930917739868</real>
+				<real>0.42352941632270813</real>
 				<key>Red Component</key>
-				<real>0.44058024883270264</real>
+				<real>0.18039216101169586</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.72908437252044678</real>
+				<real>0.62352943420410156</real>
 				<key>Green Component</key>
-				<real>0.33896297216415405</real>
+				<real>0.63529413938522339</real>
 				<key>Red Component</key>
-				<real>0.34798634052276611</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.56363654136657715</real>
+				<real>0.99607843160629272</real>
 				<key>Green Component</key>
-				<real>0.56485837697982788</real>
+				<real>0.98039215803146362</real>
 				<key>Red Component</key>
-				<real>0.50599193572998047</real>
+				<real>0.10980392247438431</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.86405980587005615</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.95794391632080078</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.98943418264389038</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.020208755508065224</real>
+				<real>0.16470588743686676</real>
 				<key>Green Component</key>
-				<real>0.54115492105484009</real>
+				<real>0.58823531866073608</real>
 				<key>Red Component</key>
-				<real>0.44977453351020813</real>
+				<real>0.027450980618596077</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.023484811186790466</real>
+				<real>0.7803921568627451</real>
 				<key>Green Component</key>
-				<real>0.46751424670219421</real>
+				<real>0.93333333333333335</real>
 				<key>Red Component</key>
-				<real>0.64746475219726562</real>
+				<real>0.97254901960784312</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.78231418132781982</real>
+				<real>0.54117649793624878</real>
 				<key>Green Component</key>
-				<real>0.46265947818756104</real>
+				<real>0.24313725531101227</real>
 				<key>Red Component</key>
-				<real>0.12754884362220764</real>
+				<real>0.0</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.43516635894775391</real>
+				<real>0.56862747669219971</real>
 				<key>Green Component</key>
-				<real>0.10802463442087173</real>
+				<real>0.27450981736183167</real>
 				<key>Red Component</key>
-				<real>0.77738940715789795</real>
+				<real>0.91372549533843994</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.52502274513244629</real>
+				<real>0.92549020051956177</real>
 				<key>Green Component</key>
-				<real>0.57082360982894897</real>
+				<real>0.81960785388946533</real>
 				<key>Red Component</key>
-				<real>0.14679534733295441</real>
+				<real>0.5372549295425415</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.79781103134155273</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.89001238346099854</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.91611063480377197</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.15170273184776306</real>
+				<real>0.40000000596046448</real>
 				<key>Green Component</key>
-				<real>0.11783610284328461</real>
+				<real>0.40000000596046448</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.40000000596046448</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.073530435562133789</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.21325300633907318</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.74176257848739624</real>
+				<real>0.87058824300765991</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9596,11 +9600,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.15170273184776306</real>
+				<real>0.95686274766921997</real>
 				<key>Green Component</key>
-				<real>0.11783610284328461</real>
+				<real>0.95686274766921997</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.95686274766921997</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9632,11 +9636,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.56363654136657715</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.56485837697982788</real>
+				<real>0.3333333432674408</real>
 				<key>Red Component</key>
-				<real>0.50599193572998047</real>
+				<real>0.78823530673980713</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9651,11 +9655,11 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.51685798168182373</real>
+				<real>0.24705882370471954</real>
 				<key>Green Component</key>
-				<real>0.50962930917739868</real>
+				<real>0.24705882370471954</real>
 				<key>Red Component</key>
-				<real>0.44058024883270264</real>
+				<real>0.24705882370471954</real>
 			</dict>
 			<key>Cursor Guide Color</key>
 			<dict>
@@ -9673,11 +9677,11 @@
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19370138645172119</real>
+				<real>0.95686274766921997</real>
 				<key>Green Component</key>
-				<real>0.15575926005840302</real>
+				<real>0.95686274766921997</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.95686274766921997</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>0</integer>
@@ -9698,11 +9702,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.51685798168182373</real>
+				<real>0.24313725531101227</real>
 				<key>Green Component</key>
-				<real>0.50962930917739868</real>
+				<real>0.24313725531101227</real>
 				<key>Red Component</key>
-				<real>0.44058024883270264</real>
+				<real>0.24313725531101227</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -10071,20 +10075,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.56363654136657715</real>
+				<real>0.32549020648002625</real>
 				<key>Green Component</key>
-				<real>0.56485837697982788</real>
+				<real>0.32549020648002625</real>
 				<key>Red Component</key>
-				<real>0.50599193572998047</real>
+				<real>0.32549020648002625</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.19370138645172119</real>
+				<real>0.88627451658248901</real>
 				<key>Green Component</key>
-				<real>0.15575926005840302</real>
+				<real>0.75686275959014893</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.66274511814117432</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10964,26 +10968,22 @@
 			<string>~/</string>
 		</dict>
 	</array>
-	<key>NoSyncDisablePromotions</key>
-	<true/>
 	<key>NoSyncHaveShownPromoWithId_4</key>
 	<true/>
 	<key>NoSyncHaveWarnedAboutPasteConfirmationChange</key>
 	<true/>
 	<key>NoSyncInstallationId</key>
-	<string>4698A8E2-C06D-4440-8880-BF769158EE9E</string>
+	<string>0372D384-E672-44C2-8172-B5EDDF23F1D7</string>
 	<key>NoSyncLastTipTime</key>
-	<real>506850930.16339201</real>
-	<key>NoSyncNeverRemindPrefsChangesLost</key>
-	<true/>
+	<real>507996003.532462</real>
 	<key>NoSyncPermissionToShowTip</key>
 	<true/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
-	<real>499233694.42887998</real>
+	<real>486838576.60981202</real>
 	<key>NoSyncTimeOfLastPromo</key>
-	<real>477658143.160788</real>
+	<real>477765924.22227901</real>
 	<key>NoSyncTimeOfLastPromoDownload</key>
-	<real>478141272.19875997</real>
+	<real>486837911.761222</real>
 	<key>NoSyncTipsToNotShow</key>
 	<array>
 		<string>000</string>
@@ -11019,17 +11019,6 @@
 		<string>0029</string>
 		<string>0030</string>
 		<string>0031</string>
-		<string>0032</string>
-		<string>0033</string>
-		<string>0034</string>
-		<string>0035</string>
-		<string>0036</string>
-		<string>0037</string>
-		<string>0038</string>
-		<string>0039</string>
-		<string>0040</string>
-		<string>0041</string>
-		<string>0042</string>
 	</array>
 	<key>OnlyWhenMoreTabs</key>
 	<false/>
@@ -11079,7 +11068,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>/Users/a13596/Desktop/repository/SettingFiles/mac</string>
+	<string>~/Desktop/repository/SettingFiles/mac/</string>
 	<key>PromptOnClose</key>
 	<true/>
 	<key>PromptOnQuit</key>
@@ -11097,11 +11086,11 @@
 	<key>SUFeedAlternateAppNameKey</key>
 	<string>iTerm</string>
 	<key>SUFeedURL</key>
-	<string>https://iterm2.com/appcasts/testing.xml?shard=61</string>
+	<string>https://iterm2.com/appcasts/testing.xml?shard=50</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-01-23T15:10:43Z</date>
+	<date>2017-02-05T14:00:05Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
