--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9371,7 +9371,7 @@
 	<key>HotKeyBookmark</key>
 	<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
 	<key>HotKeyTogglesWindow</key>
-	<false/>
+	<true/>
 	<key>Hotkey</key>
 	<true/>
 	<key>HotkeyChar</key>
@@ -9429,11 +9429,11 @@
 	<key>NSWindow Frame SUStatusFrame</key>
 	<string>84 648 400 129 0 0 1280 777 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
-	<string>1610 232 620 392 1280 -224 1280 1001 </string>
+	<string>330 302 620 392 0 0 1280 777 </string>
 	<key>NSWindow Frame SharedPreferences</key>
 	<string>236 303 796 474 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>642 50 610 727 0 0 1280 777 </string>
+	<string>572 64 610 713 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>79 64 625 714 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
@@ -9452,146 +9452,146 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.24313725531101227</real>
+				<real>0.16470588743686676</real>
 				<key>Green Component</key>
-				<real>0.24313725531101227</real>
+				<real>0.16078431904315948</real>
 				<key>Red Component</key>
-				<real>0.24313725531101227</real>
+				<real>0.14509804546833038</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.086274512112140656</real>
+				<real>0.25098040699958801</real>
 				<key>Green Component</key>
-				<real>0.043137256056070328</real>
+				<real>0.28235295414924622</real>
 				<key>Red Component</key>
-				<real>0.59215688705444336</real>
+				<real>0.94901961088180542</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.63529413938522339</real>
+				<real>0.3333333432674408</real>
 				<key>Green Component</key>
-				<real>0.83529412746429443</real>
+				<real>0.58823531866073608</real>
 				<key>Red Component</key>
-				<real>0.52941179275512695</real>
+				<real>0.38431373238563538</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.027450980392156862</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.81568627450980391</real>
+				<real>0.53333336114883423</real>
 				<key>Red Component</key>
-				<real>0.94509803921568625</real>
+				<real>0.7137255072593689</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.729411780834198</real>
+				<real>0.7803921568627451</real>
 				<key>Green Component</key>
-				<real>0.42352941632270813</real>
+				<real>0.45882352941176469</real>
 				<key>Red Component</key>
-				<real>0.18039216101169586</real>
+				<real>0.12549019607843137</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.62352943420410156</real>
+				<real>0.83137255907058716</real>
 				<key>Green Component</key>
-				<real>0.63529413938522339</real>
+				<real>0.49803921580314636</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.47450980544090271</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99607843160629272</real>
+				<real>0.55294120311737061</real>
 				<key>Green Component</key>
-				<real>0.98039215803146362</real>
+				<real>0.58823531866073608</real>
 				<key>Red Component</key>
-				<real>0.10980392247438431</real>
+				<real>0.08235294371843338</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.85098040103912354</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.84705883264541626</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.82352942228317261</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.16470588743686676</real>
+				<real>0.3333333432674408</real>
 				<key>Green Component</key>
 				<real>0.58823531866073608</real>
 				<key>Red Component</key>
-				<real>0.027450980618596077</real>
+				<real>0.38431373238563538</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.7803921568627451</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.93333333333333335</real>
+				<real>0.53333336114883423</real>
 				<key>Red Component</key>
-				<real>0.97254901960784312</real>
+				<real>0.7137255072593689</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.54117649793624878</real>
+				<real>0.7803921568627451</real>
 				<key>Green Component</key>
-				<real>0.24313725531101227</real>
+				<real>0.45882352941176469</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.12549019607843137</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.56862747669219971</real>
+				<real>0.83137255907058716</real>
 				<key>Green Component</key>
-				<real>0.27450981736183167</real>
+				<real>0.49803921580314636</real>
 				<key>Red Component</key>
-				<real>0.91372549533843994</real>
+				<real>0.47450980544090271</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.92549020051956177</real>
+				<real>0.55294120311737061</real>
 				<key>Green Component</key>
-				<real>0.81960785388946533</real>
+				<real>0.58823531866073608</real>
 				<key>Red Component</key>
-				<real>0.5372549295425415</real>
+				<real>0.08235294371843338</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.85098040103912354</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.84705883264541626</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.82352942228317261</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.40000000596046448</real>
+				<real>0.16470588743686676</real>
 				<key>Green Component</key>
-				<real>0.40000000596046448</real>
+				<real>0.16078431904315948</real>
 				<key>Red Component</key>
-				<real>0.40000000596046448</real>
+				<real>0.14509804546833038</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.25098040699958801</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.28235295414924622</real>
 				<key>Red Component</key>
-				<real>0.87058824300765991</real>
+				<real>0.94901961088180542</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9600,11 +9600,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.95686274766921997</real>
+				<real>0.25490197539329529</real>
 				<key>Green Component</key>
-				<real>0.95686274766921997</real>
+				<real>0.24705882370471954</real>
 				<key>Red Component</key>
-				<real>0.95686274766921997</real>
+				<real>0.23921568691730499</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9636,11 +9636,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.92621010541915894</real>
 				<key>Green Component</key>
-				<real>0.3333333432674408</real>
+				<real>0.9264177680015564</real>
 				<key>Red Component</key>
-				<real>0.78823530673980713</real>
+				<real>0.92623984813690186</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9655,11 +9655,11 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.24705882370471954</real>
+				<real>0.51685798168182373</real>
 				<key>Green Component</key>
-				<real>0.24705882370471954</real>
+				<real>0.50962930917739868</real>
 				<key>Red Component</key>
-				<real>0.24705882370471954</real>
+				<real>0.44058024883270264</real>
 			</dict>
 			<key>Cursor Guide Color</key>
 			<dict>
@@ -9677,11 +9677,11 @@
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.95686274766921997</real>
+				<real>0.19370138645172119</real>
 				<key>Green Component</key>
-				<real>0.95686274766921997</real>
+				<real>0.15575926005840302</real>
 				<key>Red Component</key>
-				<real>0.95686274766921997</real>
+				<real>0.0</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>0</integer>
@@ -9702,11 +9702,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.24313725531101227</real>
+				<real>0.85098040103912354</real>
 				<key>Green Component</key>
-				<real>0.24313725531101227</real>
+				<real>0.84705883264541626</real>
 				<key>Red Component</key>
-				<real>0.24313725531101227</real>
+				<real>0.82352942228317261</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -10075,20 +10075,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.32549020648002625</real>
+				<real>0.85098040103912354</real>
 				<key>Green Component</key>
-				<real>0.32549020648002625</real>
+				<real>0.84705883264541626</real>
 				<key>Red Component</key>
-				<real>0.32549020648002625</real>
+				<real>0.82352942228317261</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.88627451658248901</real>
+				<real>0.51372551918029785</real>
 				<key>Green Component</key>
-				<real>0.75686275959014893</real>
+				<real>0.25882354378700256</real>
 				<key>Red Component</key>
-				<real>0.66274511814117432</real>
+				<real>0.12941177189350128</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10975,7 +10975,7 @@
 	<key>NoSyncInstallationId</key>
 	<string>0372D384-E672-44C2-8172-B5EDDF23F1D7</string>
 	<key>NoSyncLastTipTime</key>
-	<real>507996003.532462</real>
+	<real>511288359.79520899</real>
 	<key>NoSyncPermissionToShowTip</key>
 	<true/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
@@ -10984,6 +10984,8 @@
 	<real>477765924.22227901</real>
 	<key>NoSyncTimeOfLastPromoDownload</key>
 	<real>486837911.761222</real>
+	<key>NoSyncTipsDisabled</key>
+	<true/>
 	<key>NoSyncTipsToNotShow</key>
 	<array>
 		<string>000</string>
@@ -11019,6 +11021,26 @@
 		<string>0029</string>
 		<string>0030</string>
 		<string>0031</string>
+		<string>0032</string>
+		<string>0033</string>
+		<string>0034</string>
+		<string>0035</string>
+		<string>0036</string>
+		<string>0037</string>
+		<string>0038</string>
+		<string>0039</string>
+		<string>0040</string>
+		<string>0041</string>
+		<string>0042</string>
+		<string>0043</string>
+		<string>0044</string>
+		<string>0045</string>
+		<string>0046</string>
+		<string>0047</string>
+		<string>0048</string>
+		<string>0049</string>
+		<string>0050</string>
+		<string>0051</string>
 	</array>
 	<key>OnlyWhenMoreTabs</key>
 	<false/>
@@ -11027,7 +11049,7 @@
 	<key>OpenBookmark</key>
 	<false/>
 	<key>OpenTmuxWindowsIn</key>
-	<integer>1</integer>
+	<integer>0</integer>
 	<key>PMPrintingExpandedStateForPrint2</key>
 	<false/>
 	<key>PassOnControlClick</key>
@@ -11090,7 +11112,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-02-05T14:00:05Z</date>
+	<date>2017-03-15T13:45:15Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
@@ -11145,6 +11167,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.0.13</string>
+	<string>3.0.15</string>
 </dict>
 </plist>
