--- a/.tmux.conf
+++ b/.tmux.conf
@@ -128,13 +128,12 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind C-t send-prefix
 
 # vでペインを縦に分割する
-bind v split-window -h -c "#{pane_current_path}"
-# unbind C-v
-# bind -n C-v split-window -h -c "#{pane_current_path}"
+# bind v split-window -h -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
 # sでペインを横に分割する
-bind s split-window -v -c "#{pane_current_path}"
-# bind -n C-s split-window -v -c "#{pane_current_path}"
+# bind s split-window -v -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
 
 # Vimのキーバインドでペインを移動する
 # bind -r C-h select-window -t :-
@@ -171,7 +170,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # ウィンドウ選択画面
-bind Space choose-window
+bind W choose-window
 # 分割していたペインそれぞれをWindowに
 bind b break-pane
 
@@ -185,6 +184,10 @@ bind x kill-pane
 # bind K kill-window
 # ペイン番号表示
 bind i display-panes
+
+# synchronized-pane
+bind S set-window-option synchronize-panes
+
 # コピーモード突入
 bind -n C-Space copy-mode
 # ペースト
