--- a/gitfiles/.gitconfig
+++ b/gitfiles/.gitconfig
@@ -130,7 +130,7 @@
 [include]
 	path = .gitconfig.local
 [diff]
-    tool = mvimdiff
+	tool = p4mergetool
     ; http://qiita.com/takaakikasai/items/3d4f8a4867364a46dfa3
     algorithm = histogram
 	compactionHeuristic = true
@@ -141,7 +141,8 @@
 	path =
 [merge]
 	# tool = atom
-	tool = mvimdiff
+	tool = p4mergetool
+  # tool = mvimdiff
 [mergetool "mvimdiff"]
   cmd = mvim -f -d \"$LOCAL\" \"$MERGED\" \"$REMOTE\"
 	keepBackup = false
@@ -166,3 +167,11 @@ stage = <Ctrl-n> :/^@@
 stage = <Ctrl-p> :?^@@
 [init]
 	templatedir = ~/.git_template
+[mergetool "sourcetree"]
+	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
+[mergetool "p4mergetool"]
+	cmd = /Applications/p4merge.app/Contents/Resources/launchp4merge $PWD/$BASE $PWD/$REMOTE $PWD/$LOCAL $PWD/$MERGED
+	trustExitCode = false
+[difftool "p4mergetool"]
+	cmd = /Applications/p4merge.app/Contents/Resources/launchp4merge $LOCAL $REMOTE
