--- a/.tmux.conf
+++ b/.tmux.conf
@@ -216,7 +216,7 @@ set -g visual-activity on
 # http://mba-hack.blogspot.jp/2014/03/tmux11.html
 # bind -t vi-copy z copy-line
 # bind -n C-y run 'tmux copy-mode\;' send-keys z\; display "1 line copied."
-bind -t vi-copy z select-line
+bind -T copy-mode-vi z send-keys -X select-line
 bind -n C-y run 'tmux copy-mode\;' send-keys z y Enter\; display "1 line copied."
 
 # コピーモードを設定する
@@ -230,18 +230,18 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 ## コピーモードの操作をvi風に設定する
 # bind-key -t vi-copy v begin-selection
 # bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t vi-copy Enter copy-selection
-bind-key -t vi-copy u halfpage-up
-bind-key -t vi-copy d halfpage-down
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-selection
+bind-key -T copy-mode-vi u send-keys -X halfpage-up
+bind-key -T copy-mode-vi d send-keys -X halfpage-down
 # unbind -t vi-copy Enter
 # bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # C-vで矩形選択の切り替え
-bind -t vi-copy C-v rectangle-toggle
+bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
 # Yで1行ヤンク
-bind -t vi-copy Y copy-line
+bind -T copy-mode-vi Y send-keys -X copy-line
 
 
 #####################################
