atom軽量化とtmuxの見た目変更

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,8 +25,8 @@ set-option -g default-terminal "xterm"
 
 # ステータスバーの色を設定する
 # 暗いカラースキームの時
-set -g status-bg black
-set -g status-fg white
+# set -g status-bg black
+# set -g status-fg white
 # 明るいカラースキームの時
 # set -g status-bg white
 # set -g status-fg black
@@ -38,7 +38,7 @@ setw -g window-status-attr dim
 
 # アクティブなウィンドウの色
 setw -g window-status-current-fg white
-setw -g window-status-current-bg red
+setw -g window-status-current-bg black
 setw -g window-status-current-attr bright
 
 # 最後に選択したウィンドウの色
@@ -49,21 +49,21 @@ setw -g window-status-last-attr bright
 # set-window-option -g window-status-alert-bg black
 # set-window-option -g window-status-alert-fg yellow
 
-set-window-option -g window-status-activity-style "fg=#8ae234,bg=default"
+# set-window-option -g window-status-activity-style "fg=#8ae234,bg=default"
 
 # ペインボーダーの色を設定する
-set -g pane-border-fg black
+#set -g pane-border-fg black
 # 明るいカラースキームの時
 # set -g pane-border-bg white
 # 暗いカラースキームの時
-set -g pane-border-bg black
+# set -g pane-border-bg black
 
 # アクティブなペインを目立たせる
-set -g pane-active-border-fg red
+# set -g pane-active-border-fg red
 # 明るいカラースキームの時
 # set -g pane-active-border-bg white
 # 暗いカラースキームの時
-set -g pane-active-border-bg black
+# set -g pane-active-border-bg black
 
 #set inactive/active window styles
 # http://stackoverflow.com/questions/25532773/change-background-color-of-active-or-inactive-pane-in-tmux
@@ -92,8 +92,8 @@ set -g message-bg blue
 set -g message-attr bright
 
 # pane number display
-set-option -g display-panes-active-colour blue #blue
-set-option -g display-panes-colour brightred #orange
+# set-option -g display-panes-active-colour blue #blue
+# set-option -g display-panes-colour brightred #orange
 
 # ステータスバーを設定する
 # ステータスバーの位置
