--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9380,6 +9380,8 @@
 	<integer>46</integer>
 	<key>HotkeyCode</key>
 	<integer>47</integer>
+	<key>HotkeyMigratedFromSingleToMulti</key>
+	<true/>
 	<key>HotkeyModifiers</key>
 	<integer>1048848</integer>
 	<key>IRMemory</key>
@@ -9437,13 +9439,13 @@
 	<key>NSWindow Frame Preferences</key>
 	<string>356 321 606 456 0 0 1280 777 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
-	<string>84 648 400 129 0 0 1280 777 </string>
+	<string>440 499 400 129 0 0 1280 777 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
-	<string>330 302 620 392 0 0 1280 777 </string>
+	<string>330 301 620 392 0 0 1280 777 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>236 303 796 473 0 0 1280 777 </string>
+	<string>60 304 796 473 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>647 64 610 713 0 0 1280 777 </string>
+	<string>20 47 892 722 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>79 64 625 714 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
@@ -9462,146 +9464,146 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.10051459074020386</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.10051288455724716</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.10051589459180832</real>
+				<real>0.0</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3728577196598053</real>
+				<real>0.47843137254901957</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.46666666666666667</real>
 				<key>Red Component</key>
-				<real>0.95683503150939941</real>
+				<real>0.94901960784313721</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.14004382491111755</real>
+				<real>0.59999999999999998</real>
 				<key>Green Component</key>
-				<real>0.87921047210693359</real>
+				<real>0.80000000000000004</real>
 				<key>Red Component</key>
-				<real>0.59473341703414917</real>
+				<real>0.59999999999999998</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.38154411315917969</real>
+				<real>0.40000000000000002</real>
 				<key>Green Component</key>
-				<real>0.83635991811752319</real>
+				<real>0.80000000000000004</real>
 				<key>Red Component</key>
-				<real>0.87748134136199951</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99877572059631348</real>
+				<real>0.80000000000000004</real>
 				<key>Green Component</key>
-				<real>0.39599207043647766</real>
+				<real>0.59999999999999998</real>
 				<key>Red Component</key>
-				<real>0.61468899250030518</real>
+				<real>0.40000000000000002</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3728577196598053</real>
+				<real>0.80000000000000004</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.59999999999999998</real>
 				<key>Red Component</key>
-				<real>0.95683503150939941</real>
+				<real>0.80000000000000004</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.92060363292694092</real>
+				<real>0.80000000000000004</real>
 				<key>Green Component</key>
-				<real>0.81977206468582153</real>
+				<real>0.80000000000000004</real>
 				<key>Red Component</key>
-				<real>0.34416967630386353</real>
+				<real>0.40000000000000002</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.9359474778175354</real>
+				<real>0.99999129772186279</real>
 				<key>Green Component</key>
-				<real>0.96549534797668457</real>
+				<real>0.99997437000274658</real>
 				<key>Red Component</key>
-				<real>0.96537256240844727</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.14004382491111755</real>
+				<real>0.59999999999999998</real>
 				<key>Green Component</key>
-				<real>0.87921047210693359</real>
+				<real>0.80000000000000004</real>
 				<key>Red Component</key>
-				<real>0.59473341703414917</real>
+				<real>0.59999999999999998</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.099807053804397583</real>
+				<real>0.40000000000000002</real>
 				<key>Green Component</key>
-				<real>0.51805692911148071</real>
+				<real>0.80000000000000004</real>
 				<key>Red Component</key>
-				<real>0.98094809055328369</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99877572059631348</real>
+				<real>0.80000000000000004</real>
 				<key>Green Component</key>
-				<real>0.39599207043647766</real>
+				<real>0.59999999999999998</real>
 				<key>Red Component</key>
-				<real>0.61468899250030518</real>
+				<real>0.40000000000000002</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3728577196598053</real>
+				<real>0.80000000000000004</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.59999999999999998</real>
 				<key>Red Component</key>
-				<real>0.95683503150939941</real>
+				<real>0.80000000000000004</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.92060363292694092</real>
+				<real>0.80000000000000004</real>
 				<key>Green Component</key>
-				<real>0.81977206468582153</real>
+				<real>0.80000000000000004</real>
 				<key>Red Component</key>
-				<real>0.34416967630386353</real>
+				<real>0.40000000000000002</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>0.99999129772186279</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>0.99997437000274658</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.29652142524719238</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.36959609389305115</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.3829454779624939</real>
+				<real>0.0</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3728577196598053</real>
+				<real>0.47843137250000001</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.46666666670000001</real>
 				<key>Red Component</key>
-				<real>0.95683503150939941</real>
+				<real>0.94901960780000005</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9610,11 +9612,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.10051459074020386</real>
+				<real>0.1764705882352941</real>
 				<key>Green Component</key>
-				<real>0.10051288455724716</real>
+				<real>0.1764705882352941</real>
 				<key>Red Component</key>
-				<real>0.10051589459180832</real>
+				<real>0.1764705882352941</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9627,9 +9629,9 @@
 				<key>Blue Component</key>
 				<real>0.0</real>
 				<key>Color Space</key>
-				<string>Calibrated</string>
+				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.1491314172744751</real>
 				<key>Red Component</key>
 				<real>1</real>
 			</dict>
@@ -9646,11 +9648,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>0.80000000000000004</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>0.80000000000000004</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>0.80000000000000004</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9665,11 +9667,11 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.92647796869277954</real>
+				<real>0.80000000000000004</real>
 				<key>Green Component</key>
-				<real>0.96674919128417969</real>
+				<real>0.80000000000000004</real>
 				<key>Red Component</key>
-				<real>0.96554505825042725</real>
+				<real>0.80000000000000004</real>
 			</dict>
 			<key>Cursor Guide Color</key>
 			<dict>
@@ -9678,20 +9680,20 @@
 				<key>Blue Component</key>
 				<real>1</real>
 				<key>Color Space</key>
-				<string>Calibrated</string>
+				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.91000000000000003</real>
+				<real>0.9268307089805603</real>
 				<key>Red Component</key>
-				<real>0.65000000000000002</real>
+				<real>0.70213186740875244</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>0.1764705882</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>0.1764705882</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>0.1764705882</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>1</integer>
@@ -9712,11 +9714,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>0.80000000000000004</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>0.80000000000000004</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>0.80000000000000004</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -10044,13 +10046,13 @@
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.67800000000000005</real>
+				<real>0.73423302173614502</real>
 				<key>Color Space</key>
-				<string>Calibrated</string>
+				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.27000000000000002</real>
+				<real>0.35916060209274292</real>
 				<key>Red Component</key>
-				<real>0.023</real>
+				<real>0.0</real>
 			</dict>
 			<key>Log Directory</key>
 			<string></string>
@@ -10085,20 +10087,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>0.80000000000000004</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>0.80000000000000004</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>0.80000000000000004</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.20521116256713867</real>
+				<real>0.31764705882352939</real>
 				<key>Green Component</key>
-				<real>0.20520767569541931</real>
+				<real>0.31764705882352939</real>
 				<key>Red Component</key>
-				<real>0.20521381497383118</real>
+				<real>0.31764705882352939</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -11122,7 +11124,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-04-29T08:42:42Z</date>
+	<date>2017-06-24T04:33:58Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
@@ -11177,6 +11179,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.0.15</string>
+	<string>3.1.beta.5</string>
 </dict>
 </plist>
