--- a/vimfiles/dein/nvim/dein.toml
+++ b/vimfiles/dein/nvim/dein.toml
@@ -28,3 +28,6 @@ repo      = 'flazz/vim-colorschemes'
 
 [[plugins]]
 repo = 'Shougo/neosnippet-snippets'
+
+[[plugins]]
+repo = 'rickhowe/diffchar.vim'
