--- a/gitfiles/.gitconfig
+++ b/gitfiles/.gitconfig
@@ -147,16 +147,28 @@
 	# tool = atom
 	; tool = p4mergetool
   # tool = mvimdiff
+  # tool = vimdiff
+  # tool = p4merge
   tool = nvim
+  # tool = vim
 [mergetool "mvimdiff"]
   cmd = mvim -f -d \"$LOCAL\" \"$MERGED\" \"$REMOTE\"
-	keepBackup = false
 [mergetool "atom"]
   cmd = atom_merge $MERGED
-	keepBackup = false
 [mergetool "nvim"]
-  cmd = nvim -f -d \"$LOCAL\" \"$MERGED\" \"$REMOTE\"
-	keepBackup = false
+  # 2-way
+  cmd = nvim -f -d -c 'wincmd J' \"$MERGED\" \"$LOCAL\" \"$REMOTE\"
+  # 3-way
+  # cmd = nvim -f -d -c 'wincmd J' \"$MERGED\" \"$LOCAL\" \"$BASE\" \"$REMOTE\"
+[mergetool "vim"]
+  # 2-way
+  cmd = vim -f -d -c 'wincmd J' \"$MERGED\" \"$LOCAL\" \"$REMOTE\"
+  # 3-way
+  # cmd = vim -f -d -c 'wincmd J' \"$MERGED\" \"$LOCAL\" \"$BASE\" \"$REMOTE\"
+[mergetool "p4merge"]
+  cmd = /Applications/p4merge.app/Contents/Resources/launchp4merge "\"$PWD/$BASE\"" "\"$PWD/$REMOTE\"" "\"$PWD/$LOCAL\"" "\"$PWD/$MERGED\""
+  keepTemporaries = false
+  trustExitCode = false
 [i18n]
 	commitencoding = utf-8
 [mergetool]
