--- a/.ideavimrc
+++ b/.ideavimrc
@@ -7,6 +7,16 @@ set ignorecase
 "検索時に大文字を含んでいたら大/小を区別
 set smartcase
 
+" キーワードのセパレータ追加
+set iskeyword-=_
+
+set incsearch
+
+set matchpairs+=<:>
+
+" message on status line to show current mode
+set showmode
+
 " enable vim-surround plugin.
 set surround
 
