[vim] Linediffプラグイン追加

--- a/vimfiles/dein/nvim/dein.toml
+++ b/vimfiles/dein/nvim/dein.toml
@@ -31,3 +31,6 @@ repo = 'Shougo/neosnippet-snippets'
 
 [[plugins]]
 repo = 'rickhowe/diffchar.vim'
+
+[[plugins]]
+repo = 'AndrewRadev/linediff.vim'
